Start search page

--- a/hotel_top/templates/partials/base.html
+++ b/hotel_top/templates/partials/base.html
@@ -18,7 +18,27 @@
 {% block main_menu %}
 {% endblock %}
 
+{% block content_top %}
+{% endblock %}
+
+{% block message%}
+******* Message ******
+    {% if messages %}
+       <p>System message:</p>
+      {% for message in messages %}
+        <li> {{message}} </li>
+      {% endfor %}
+    {% endif %}
+  </ul>
+	<div class="row">
+****** End message *********** <br> 
+{% endblock %}
+
 {% block content %}
+{% endblock %}
+
+
+{% block content_botom %}
 {% endblock %}
 
 {% block base_bottom %}
