--- a/hotel_top/templates/partials/navbar.html
+++ b/hotel_top/templates/partials/navbar.html
@@ -27,7 +27,7 @@
     </div>
       <ul class="navbar-nav">
           <li class="nav-item ">
-****************
+******* Вставить сюда логины
           </li>
       </ul>
 
