--- a/hotel_top/user/templates/user/room_search.html
+++ b/hotel_top/user/templates/user/room_search.html
@@ -19,6 +19,7 @@
     </div>
 </div>
 <h1>Rooms</h1>
+{% if not no_rooms %}
   <table class="table">
     <thead>
       <tr>
@@ -37,6 +38,10 @@
      {% endfor %}
     </tbody>
   </table>
+{% else %}
+  <h1>There are no rooms matching your search criteria.</h1>
+  <h1>Please change your settings and search again.</h1>
+{% endif %}
 {% endblock %}
 
 {% block content_bottom%}
