--- a/hotel_top/user/templates/user/homepage.html
+++ b/hotel_top/user/templates/user/homepage.html
@@ -12,7 +12,87 @@
     {% endif %}
   </ul>
 	<div class="row">
-*******************************
+
+<div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/static/slide4.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/static/slide0.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/static/slide1.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<div class="text-start py-2 py-sm-3 py-lg-10">
+  <p class="fs-2">Active and vitality holidays in South Tyrol</p>
+  <p class="fs-5">WELCOME TO DAS GERSTL ALPINE RETREAT IN THE VINSCHGAU</p>
+</div>
+<div class="text-end">
+  <p class="fs-2">Enjoy moments of well-being</p>
+  <p class="fs-5">ROOMS & SUITES FOR YOUR HOLIDAY IN SOUTH TYROL</p>
+</div>
+</div>
+<div class="blocks row">
+<div class="block col-lg-2 col-sm-2"><a href ="#"> <button type="button" class="btn btn-secondary" >Leave your review </button></a></div>
+<div class="block col-lg-8 col-sm-8"></div>
+<div class="block col-lg-2 col-sm-2"><a href ="#"> <button type="button" class="btn btn-secondary" >Send us your question</button></a>  </div>
+<div>
+<div class = "block row py-2 py-sm-3 py-lg-10">       
+<div class="blocks row w-100 justify-content-center" py-2 py-sm-3 py-lg-20>
+  <div class="block col-lg-6 col-sm-12"><img src="/static/hotel0.jpg" class="img-fluid"> </div>
+  <div class="block col-lg-5 col-sm-12"><div class="text-start">
+    <div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <p class="fs-3">Active and vitality holidays in Tyrol</p>
+    <p class="fs-6">WELCOME TO DAS GERSTL ALPINE RETREAT IN THE VINSCHGAU</p>
+    <p class="fs-6">In the new and spacious garden area with 18 m heated outdoor infinity pool, 
+      an exclusive oasis of peace awaits you from June 2023! In the new light-flooded Venosta SPA you will find
+      holistic relaxation and five new suites leave nothing to be desired!</p></div>
+    </div>
+  </div>
+</div>
+</div> 
+
+<div class="blocks row w-100 justify-content-center my-2 my-sm-3 my-lg-4">
+  <div class="block col-lg-5 col-sm-12"><div class="text-start">
+    <div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <p class="fs-3">Breathtaking view</p>
+    <p class="fs-6">& VITALITY BREAKFAST</p>
+    <p class="fs-6">Despite the comfort of our suites, furnished with healthy, fragrant pine wood, we get up early, following the call of the mountains. Sunshine and blue skies invite us to get active and enjoy South Tyrol's mountain world to its fullest.
+      We have a vitality breakfast on the terrace, where the morning sun can fill us with some additional energy, warming our skin and our hearts. The vitality breakfast buffet awaits us with a wide selection of delicious and healthy regional products, including freshly pressed juices, locally produced bread and cheese made on the Schliniger Alm, a shepherds' hut in the mountains. There is no doubt: This is the perfect start for our holiday in South Tyrol, 
+      and it's all included in Gerstl's Half-board Package.</p></div>
+    </div>
+  </div>
+
+  <div class="block col-lg-6 col-sm-12"><img src="/static/hotel1.jpg" class="img-fluid"> </div>
 	</div>
 </div>
  {% endblock%}
