--- a/hotel_top/user/templates/user/room_search.html
+++ b/hotel_top/user/templates/user/room_search.html
@@ -35,12 +35,14 @@
         <td>{{r.adults}}</td>
         <td><img src="/media/{{r.main_photo.photo}}" alt="no" style="width: 200px;"></td>
         <td>
-          <form action="{% url 'reservation_path' %}" method="post">
-            {% csrf_token %}
-            <button type="submit"  class="btn btn-primary g-2" name="reserv" value="{{r.pk}}" >Reserve</button>
-            <input type="hidden" value="{{transit.date_from}}" name="date_from">
-            <input type="hidden" value="{{transit.date_to}}" name="date_to">
-          </form>
+          {% if reservaton %}
+            <form action="{% url 'reservation_path' %}" method="post">
+              {% csrf_token %}
+              <button type="submit"  class="btn btn-primary g-2" name="reserv" value="{{r.pk}}" >Reserve</button>
+              <input type="hidden" value="{{transit.date_from}}" name="date_from">
+              <input type="hidden" value="{{transit.date_to}}" name="date_to">
+            </form>
+          {% endif %}
         </td>
       </tr>
      {% endfor %}
