--- a/hotel_top/staff/templates/staff/bookings.html
+++ b/hotel_top/staff/templates/staff/bookings.html
@@ -1,17 +1,14 @@
 {% extends 'partials/navbar.html' %}
- 
+
+{% block content_top%}
+<div class="container">
+  <h1>{{title}}</h1>
+{% endblock%}
+
+
 {% block content%}
 <div class="container">
    <h1>{{title}}</h1>
-    <ul>
-    {% if messages %}
-      <p>System message:</p>
-     {% for message in messages %}
-       <li> {{message}} </li>
-     {% endfor %}
-    {% endif %}
-    </ul>
-******************************
 
 <table class="table">
     <thead>
@@ -48,3 +45,8 @@
         {% endfor %}
 
 {% endblock%}  
+
+{% block content_bottom%}
+</div>
+</div>
+ {% endblock%}
