--- a/hotel_top/staff/templates/staff/homepage.html
+++ b/hotel_top/staff/templates/staff/homepage.html
@@ -1,5 +1,9 @@
  {% extends 'partials/navbar.html' %}
- 
+ {% block content_top%}
+<div class="container">
+  <h1>{{title}}</h1>
+{% endblock%}
+
  {% block content%}
 <div class="container">
 	<h1>{{title}}</h1>
