--- a/hotel_top/templates/partials/navbar.html
+++ b/hotel_top/templates/partials/navbar.html
@@ -27,7 +27,12 @@
     </div>
       <ul class="navbar-nav">
           <li class="nav-item ">
-******* Вставить сюда логины
+            {% if request.user.is_authenticated %}
+            <!-- {{request.user.profile.first_name}} -->
+              <a aria-current="page" href="" >{{ request.user }} </a>|<a aria-current="page" href="{% url 'logout_path' %}"> LogOUT</a>
+            {% else %}
+              <a aria-current="page" href="{% url 'registry_path' %}" >Register </a>|<a aria-current="page" href="{% url 'login_path' %}"> Login</a>
+            {% endif %}
           </li>
       </ul>
 
