--- a/hotel_top/staff/templates/staff/bookings.html
+++ b/hotel_top/staff/templates/staff/bookings.html
@@ -9,7 +9,6 @@
 {% block content%}
 <div class="container">
    <h1>{{title}}</h1>
-
 <table class="table">
     <thead>
       <tr>
@@ -43,7 +42,7 @@
                 <button type="submit" class="btn btn-warning" value="{{i.pk}}" name="cancel">Cancel booking</button></td>
                 {% else %}
                 <button type="submit" class="btn btn-secondary" value="{{i.pk}}" name="cancel">Canceled</button></td>
-                {%endif%}>
+                {%endif%}
             </form>
             </td>
         </tr>
@@ -53,5 +52,5 @@
 
 {% block content_bottom%}
 </div>
-</div>
+
  {% endblock%}
