--- a/hotel_top/user/templates/user/reservetion.html
+++ b/hotel_top/user/templates/user/reservetion.html
@@ -24,9 +24,9 @@
       <input type="hidden" name="date_from" value="{{ date_from }}">
       <input type="hidden" name="date_to" value="{{ date_to }}">
       <button class="btn btn-primary" type="submit" name="confirm" value="{{ room_pk }}">Сonfirmation</button>
-      <a href="{% url 'search_path' %}" class="btn btn-primary">Cansel</a>
+      <a href="{% url 'search_path' %}" class="btn btn-primary">Cancel</a>
     </form>
-  </div>
+  </div>c
   <div class="card-footer text-body-secondary">
   </div>
 </div>
