--- a/hotel_top/user/templates/user/review_list.html
+++ b/hotel_top/user/templates/user/review_list.html
@@ -10,11 +10,11 @@
 
 {% block content %}
 
-<div class="mx-1 mx-sm-auto">
+<div class="my-2 my-sm-3 my-lg-4">
   <div class="card">
     <div class="modal-body">
       <div class="text-center">
-        <i class="far fa-file-alt fa-4x mb-3 text-primary"></i>
+        <i class="text-primary"></i>
         <p>
           <strong>PLease, if you stayed here, share your opinion on our hotel</strong>
         </p>
@@ -26,7 +26,7 @@
         </div>
       </form>
     </div>
-    <div class="card-footer text-end">
+    <div class="card-footer text-end ">
       <form action="#" method="post">
         {% csrf_token %}
       <button type="submit" class="btn btn-warning" name="reviewbtn">Submit</button>
@@ -34,11 +34,9 @@
   </div>
 </div>
 
-
-
 {%for i in client_reviews%}
-<div class="card" style="width: 16rem;">
-  <img src="/static/reviews.jpg" class="card-img-top " alt="...">
+<div class="card col px-md-5 shadow p-3 mb-5 bg-white rounded" style="width: 16rem">
+  <img src="/static/reviews.jpg" class="card-img-top " alt="reviews">
   <div class="card-body">
     <p class="card-text">{{i.text}}</p>
   </div>
