small changes in menu

--- a/hotel_top/user/templates/user/review_list.html
+++ b/hotel_top/user/templates/user/review_list.html
@@ -16,7 +16,7 @@
       <div class="text-center">
         <i class="text-primary"></i>
         <p>
-          <strong>PLease, if you stayed here, share your opinion on our hotel</strong>
+          <strong>Please, if you stayed here, share your opinion on our hotel</strong>
         </p>
       </div>
      
