--- a/hotel_top/user/templates/user/homepage.html
+++ b/hotel_top/user/templates/user/homepage.html
@@ -55,9 +55,9 @@
 </div>
 </div>
 <div class="blocks row">
-<div class="block col-lg-2 col-sm-2"><a href ="/reviews"> <button type="button" class="btn btn-secondary" >Leave your review </button></a></div>
+<div class="block col-lg-2 col-sm-2"><a href ="/review"> <button type="button" class="btn btn-secondary" >Leave your review </button></a></div>
 <div class="block col-lg-8 col-sm-8"></div>
-<div class="block col-lg-2 col-sm-2"><a href ="/inquiries">  <button type="button" class="btn btn-secondary" >Send us your question</button></a>  </div>
+<div class="block col-lg-2 col-sm-2"><a href ="/inquiry">  <button type="button" class="btn btn-secondary" >Send us your question</button></a>  </div>
 <div>
 <div class = "block row py-2 py-sm-3 py-lg-10">       
 <div class="blocks row w-100 justify-content-center" py-2 py-sm-3 py-lg-20>
