buttons spacing and color

--- a/hotel_top/user/templates/user/inquiries.html
+++ b/hotel_top/user/templates/user/inquiries.html
@@ -28,7 +28,7 @@
       <div class="card-footer text-end ">
         <form action="#" method="post">
           {% csrf_token %}
-        <button type="submit" class="btn btn-warning" name="reviewbtn">Submit</button>
+        <button type="submit" class="btn btn-secondary" name="reviewbtn">Submit</button>
       </div>
     </div>
   </div>
