--- a/hotel_top/user/templates/user/review.html
+++ b/hotel_top/user/templates/user/review.html
@@ -15,8 +15,8 @@
     <form action="" method="post">
       {% csrf_token %}
       {{ form|crispy }}
-      <button class="btn btn-primary" type="submit">Sent</button>
-      <button class="btn btn-primary" type="reset">Clear</button>
+      <button class="btn btn-secondary mt-3" type="submit">Sent</button>
+      <button class="btn btn-secondary mt-3" type="reset">Clear</button>
     </form>
   </div>
 </div>
