--- a/hotel_top/user/templates/user/inquiry.html
+++ b/hotel_top/user/templates/user/inquiry.html
@@ -11,12 +11,12 @@
 {% block content %}
 <div class="row">
   <div class="col-4"></div>
-  <div class="col-4">
-    <form action="" method="post">
+  <div class="col-5">
+    <form action="" method="post" >
       {% csrf_token %}
       {{ form|crispy }}
-      <button class="btn btn-primary" type="submit">Sent</button>
-      <button class="btn btn-primary" type="reset">Clear</button>
+      <button class="btn btn-secondary mt-3" type="submit">Sent</button>
+      <button class="btn btn-secondary mt-3" type="reset">Clear</button>
     </form>
   </div>
 </div>
