--- a/hotel_top/user/templates/user/reservetion.html
+++ b/hotel_top/user/templates/user/reservetion.html
@@ -23,10 +23,10 @@
       {{form|crispy}}
       <input type="hidden" name="date_from" value="{{ date_from }}">
       <input type="hidden" name="date_to" value="{{ date_to }}">
-      <button class="btn btn-primary" type="submit" name="confirm" value="{{ room_pk }}">Сonfirmation</button>
-      <a href="{% url 'search_path' %}" class="btn btn-primary">Cancel</a>
+      <button type="submit" name="confirm" class="btn btn-secondary mt-3" value="{{ room_pk }}">Сonfirm</button>
+      <a href="{% url 'search_path' %}" class="btn btn-secondary mt-3">Cancel</a>
     </form>
-  </div>c
+  </div>
   <div class="card-footer text-body-secondary">
   </div>
 </div>
