--- a/hotel_top/user/templates/user/room_search.html
+++ b/hotel_top/user/templates/user/room_search.html
@@ -14,7 +14,7 @@
       <form action="" method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-primary g-2" name="search" value="1">Search</button>
+        <button type="submit" class="btn btn-secondary mt-3 mb-3" name="search" value="1">Search</button>
       </form>
     </div>
 </div>
@@ -38,7 +38,7 @@
           {% if reservaton %}
             <form action="{% url 'reservation_path' %}" method="post">
               {% csrf_token %}
-              <button type="submit"  class="btn btn-primary g-2" name="reserv" value="{{r.pk}}" >Reserve</button>
+              <button type="submit"  class="btn btn-secondary mt-3 g-2" name="reserv" value="{{r.pk}}" >Reserve</button>
               <input type="hidden" value="{{transit.date_from}}" name="date_from">
               <input type="hidden" value="{{transit.date_to}}" name="date_to">
             </form>
