--- a/hotel_top/templates/partials/navbar.html
+++ b/hotel_top/templates/partials/navbar.html
@@ -3,7 +3,7 @@
 {% block main_menu %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="">///</a>
+    <a class="navbar-brand" href="{% url 'main_page_path' %}">///</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
